--- a/src/options.html
+++ b/src/options.html
@@ -24,6 +24,6 @@
     </div>
     <button id="save">Save</button>
     <div id="status"></div>
-    <script src="options.js"></script>
+    <script src="options.js" type="module"></script>
   </body>
 </html>
